--- a/jsworks/day16/person.html
+++ b/jsworks/day16/person.html
@@ -12,8 +12,8 @@
             isMerried : false,
 
             play : function(){
-                //alert("골인!!")
-                console.log("골인!!");
+                alert("골인!!")
+                //console.log("골인!!");
             }
         }
         
